--- a/HitballGame.html
+++ b/HitballGame.html
@@ -30,6 +30,7 @@
              width: 200,
              height: 100,
          }
+         var paddle = o;
          o.moveleft = function() {
               paddle.x -= paddle.speed;
          }
@@ -38,71 +39,76 @@
          }
          return o;
     }
-    var Ball = function() {
-         var image = imageFromPath('Ball.png');
-         var o = {
-             image: image,
-             x: 100,
-             y: 100,
-             speed: 10,
-             width: 50,
-             height: 50,
-         }
-         return o;
-    }
+
 
     var GuaGame = function () {
-         var g = {};
+         var g = {
+              actions: {},
+              keydowns: {},
+         };
          var canvas = document.querySelector('#id_canvas');
          var context = canvas.getContext('2d');
          g.canvas = canvas;
          g.context = context;
+
+         //drawImage
+         g.drawImage = function(guaImage) {
+              g.context.drawImage(guaImage.image, guaImage.x, guaImage.y, guaImage.width, guaImage.height);
+         }
+
+         //events
+         window.addEventListener('keydown', function(event){
+              g.keydowns[event.key] = true;
+         })
+         window.addEventListener('keyup', function(event){
+              g.keydowns[event.key] = false;
+         })
+
+         //registerAction 按下key执行callback
+         g.registerAction = function(key, callback){
+              g.actions[key] = callback;
+         }
          setInterval(function () {
+              //events
+              var actions = Object.keys(g.actions);
+              for (var i = 0; i < actions.length; i++) {
+                   var key = actions[i];
+                   //按键按下调用g.actions[key]函数
+                   if (g.keydowns[key]) {
+                        g.actions[key]();
+                   }
+              }
+              //update
+              g.update();
+              context.clearRect(0, 0, canvas.width, canvas.height);
+
+              //drawImage
+              g.draw();
 
          },1000/60)
+         return g;
+    }
+var _main = function() {
+     var paddle = Paddle();
+     var game = GuaGame();
+
+     game.registerAction('a', function(){
+         paddle.moveleft();
+    });
+     game.registerAction('d', function(){
+         paddle.moveright();
+    });
+     game.update = function() {
+
+    }
+     game.draw = function() {
+         game.drawImage(paddle);
+
     }
 
-    var leftkey = false;
-    var rightkey = false;
-    var paddle = Paddle();
-    var ball = Ball();
-    var game = GuaGame();
-//events
-window.addEventListener('keydown', function (event){
-      var k = event.key;
-      if (k == 'a') {
-           leftkey = true;
-      }
-      if (k == 'd') {
-           rightkey = true;
+}
 
-     }
-})
-window.addEventListener('keyup', function (event){
-      var k = event.key;
-      if (k == 'a') {
-           leftkey = false;
-      }
-      if (k == 'd') {
-           rightkey = false;
-
-     }
-})
-
-//update
-setInterval(function(){
-     if (leftkey) {
-          paddle.moveleft();
-     }
-     else if (rightkey) {
-          paddle.moveright();;
-     }
-     //draw
-     context.clearRect(0, 0, canvas.width, canvas.height);
-     context.drawImage(paddle.image, paddle.x, paddle.y, paddle.width, paddle.height);
-     context.drawImage(ball.image, ball.x, ball.y, ball.width, ball.height);
-}, 1000/60);
-
+_main();
 
 
 
