--- a/HitballGame.html
+++ b/HitballGame.html
@@ -24,19 +24,51 @@
          var image = imageFromPath('Wall.jpg');
          var o = {
              image: image,
-             x: 100,
+             x: 300,
              y: 300,
              speed: 5,
              width: 200,
              height: 100,
          }
-         var paddle = o;
+
          o.moveleft = function() {
-              paddle.x -= paddle.speed;
+              o.x -= o.speed;
          }
          o.moveright = function() {
-              paddle.x += paddle.speed;
+              o.x += o.speed;
          }
+         return o;
+    }
+    var Ball = function() {
+         var image = imageFromPath('Ball.png');
+         var o = {
+             image: image,
+             x: 400,
+             y: 200,
+             speedx: 10,
+             speedy: 10,
+             width: 50,
+             height: 50,
+             fired: false,
+         }
+         o.fire = function() {
+              o.fired = true;
+         }
+         o.move = function() {
+              if (o.fired) {
+                   //fantan
+                   if (o.x < 0 || o.x > 750) {
+                        o.speedx *= -1;
+                   }
+                   if (o.y < 0 || o.y > 550) {
+                        o.speedy *= -1;
+                   }
+                   //move
+                   o.x += o.speedx;
+                   o.y += o.speedy;
+              }
+         }
+
          return o;
     }
 
@@ -68,6 +100,7 @@
          g.registerAction = function(key, callback){
               g.actions[key] = callback;
          }
+         //循环调用，提升帧率
          setInterval(function () {
               //events
               var actions = Object.keys(g.actions);
@@ -81,15 +114,16 @@
               //update
               g.update();
               context.clearRect(0, 0, canvas.width, canvas.height);
-
               //drawImage
               g.draw();
-
          },1000/60)
+
          return g;
     }
+
 var _main = function() {
      var paddle = Paddle();
+     var ball = Ball();
      var game = GuaGame();
 
      game.registerAction('a', function(){
@@ -98,12 +132,16 @@ var _main = function() {
      game.registerAction('d', function(){
          paddle.moveright();
     });
-     game.update = function() {
+    game.registerAction('f', function(){
+        ball.fire();
+   });
 
+     game.update = function() {
+          ball.move();
     }
      game.draw = function() {
          game.drawImage(paddle);
-
+         game.drawImage(ball);
     }
 
 }
