--- a/HitballGame.html
+++ b/HitballGame.html
@@ -12,6 +12,8 @@
     <script src="guagame.js"></script>
     <script src="utils.js"></script>
     <script src="levels.js"></script>
+    <script src="scene.js"></script>
+
 
   </head>
 
